--- a/pystagram/123.md
+++ b/pystagram/123.md
@@ -1,1 +1,2 @@
 ![image](https://github.com/Scanf-s/Django_projects/assets/105439069/7b0246cd-f741-4b23-b43a-7cade9a6d0ca)
+![Uploading image.png…]()
