--- a/pystagram/123.md
+++ b/pystagram/123.md
@@ -1,2 +1,55 @@
 ![image](https://github.com/Scanf-s/Django_projects/assets/105439069/7b0246cd-f741-4b23-b43a-7cade9a6d0ca)
 ![image](https://github.com/Scanf-s/Django_projects/assets/105439069/5e6dd78d-b41d-4ee4-a473-3fa83de8c378)
+
+# 백엔드 일정
+
+## 백엔드 1주차
+
+### 기획 : @Scanf-s
+- [x] 프로젝트 레포지토리 생성 및 설정
+- [x] Git branch 전략 및 규칙 설정
+- [x] 프로젝트 Readme.md 초안 작성
+- [x] 프로젝트 구조도 그림 생성
+- [x] 프로젝트 문서화
+
+### API : @Scanf-s
+- [x] Docker 개발 환경 설정
+- [x] Docker-compose 초기 세팅
+- [x] Django 프로젝트 세팅
+- [x] Frontend 요구사항을 반영한 데이터베이스 모델링 및 RDS 연결
+- [x] 데이터베이스 ERD 생성
+- [] Frontend 요구사항을 반영한 API 설계 및 구현
+- [x] Simple JWT 추가
+- [] User model 구현 및 jwt 인증방식 사용 로직 추가
+- [] S3 bucket 업로드 로직 개발
+- [] AWS EC2, RDS, S3 생성 및 연결
+
+### Scrap : @im-niber
+- Frontend 요구사항을 반영한 데이터 스크래핑 소스코드 작성
+- 데이터 스크래핑 테스트 코드 작성
+- Github project 기능 설정
+
+## 백엔드 2주차
+
+### API : @Scanf-s
+- API, Scrap, Frontend가 내부 Docker container에서 통신할 수 있도록 docker-compose 수정
+- Frontend 요구사항을 반영한 데이터베이스 모델링
+- Frontend 요구사항을 반영한 API 설계 및 구현
+
+### Scrap : @im-niber
+- Crontab을 통한 주기적 스크래핑 코드 작성
+- Frontend 요구사항을 반영한 데이터 스크래핑 소스코드 작성
+- AWS 설정 개선
+
+## 백엔드 3주차
+
+### 기획 : @Scanf-s
+- 최종 프로젝트를 main branch에 병합하고, EC2로 배포
+
+### API : @Scanf-s
+- 프로젝트 EC2 배포 준비
+- 추가 요구사항 반영한 API 서버 개선
+
+### Scrap : @im-niber
+- AWS 설정 개선
+- 추가 요구사항 반영한 Scrap 소스코드 개선
